letter spacing fix

--- a/express/fullstack-webpage/client/source/styles/ShowProducts.sass
+++ b/express/fullstack-webpage/client/source/styles/ShowProducts.sass
@@ -25,7 +25,12 @@
     h1
         margin: 30px 0px
         text-align: center
-
+    .details-img
+        height: 600px
+        width: 800px
+    .info
+        margin: 3px 0px
+        letter-spacing: 0.7px
 .show-all-products
     h1
         margin: 30px 0px
